# RayTracerCpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  configure.ps1  configure.sh  run.ps1  run.sh
src/: .main.cpp.swp  CMakeLists.txt  HitRecord.h  HittableObjects.h  Ray.h  Utils.h  color.h  main.cpp
